# TerraformedLambda

./: Cargo.toml  Dockerfile
src/: main.rs
terraform/: main.tf  variables.tf
