[package]
name = "TerraformedLambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = { version = "0.7.3" }
aws_lambda_events = { version = "0.8.3" }
tokio = { version = "1.27.0" }
simple_logger = { version = "4.1.0" }
log = { version = "0.4.17" }
serde = { version = "1.0.159" }
